{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 16,
  "lineage": "448f032f-227a-611a-bb28-deb19ec09562",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "for-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7b94a2a895f8800",
            "arn": "arn:aws:ec2:us-east-2:862066027316:elastic-ip/eipalloc-0a7b94a2a895f8800",
            "domain": "vpc",
            "id": "eipalloc-0a7b94a2a895f8800",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-22-220-166.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.220.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "qa-vpc-nat-gw-eip"
            },
            "tags_all": {
              "Name": "qa-vpc-nat-gw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wsvpc-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:862066027316:instance/i-0075dd4d94e213f39",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0075dd4d94e213f39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf58253389d59145",
            "private_dns": "ip-172-168-1-31.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.1.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08de0f772b8dbd78e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020c4b3b84f0bdabe",
            "tags": {
              "Name": "qa-vpc-instance"
            },
            "tags_all": {
              "Name": "qa-vpc-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002e00faeb5fc86f1"
            ]
          },
          "dependencies": [
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:internet-gateway/igw-0067cd31075e313b5",
            "id": "igw-0067cd31075e313b5",
            "owner_id": "862066027316",
            "tags": {
              "Name": "qa-vpc-igw"
            },
            "tags_all": {
              "Name": "qa-vpc-igw"
            },
            "vpc_id": "vpc-001fe1f48e6e65477"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wss-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7b94a2a895f8800",
            "association_id": "eipassoc-0373d5708b0e11a3a",
            "connectivity_type": "public",
            "id": "nat-09a497aa8878ff89b",
            "network_interface_id": "eni-09a8a6f2299deac0a",
            "private_ip": "172.168.1.59",
            "public_ip": "3.22.220.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-020c4b3b84f0bdabe",
            "tags": {
              "Name": "qa-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "qa-vpc-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.for-nat",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:route-table/rtb-0f3804e3a4afca332",
            "id": "rtb-0f3804e3a4afca332",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09a497aa8878ff89b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qa-vpc-pri-rt"
            },
            "tags_all": {
              "Name": "qa-vpc-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-001fe1f48e6e65477"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for-nat",
            "aws_nat_gateway.wss-nat",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:route-table/rtb-0d39fd9ef1c93a24f",
            "id": "rtb-0d39fd9ef1c93a24f",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0067cd31075e313b5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.168.1.0/26",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09a497aa8878ff89b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qa-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "qa-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-001fe1f48e6e65477"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for-nat",
            "aws_internet_gateway.ws-igw",
            "aws_nat_gateway.wss-nat",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b94c2b6aa93adbb4",
            "route_table_id": "rtb-0f3804e3a4afca332",
            "subnet_id": "subnet-01085b3e02747dc37"
          },
          "dependencies": [
            "aws_eip.for-nat",
            "aws_nat_gateway.wss-nat",
            "aws_route_table.pri-rt",
            "aws_subnet.wss-pri",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099daf4660fe9338b",
            "route_table_id": "rtb-0d39fd9ef1c93a24f",
            "subnet_id": "subnet-020c4b3b84f0bdabe"
          },
          "dependencies": [
            "aws_eip.for-nat",
            "aws_internet_gateway.ws-igw",
            "aws_nat_gateway.wss-nat",
            "aws_route_table.pub-rt",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wss-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:subnet/subnet-01085b3e02747dc37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.168.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01085b3e02747dc37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qa-vpc-pri-sub"
            },
            "tags_all": {
              "Name": "qa-vpc-pri-sub"
            },
            "vpc_id": "vpc-001fe1f48e6e65477"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wss-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:subnet/subnet-020c4b3b84f0bdabe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.168.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020c4b3b84f0bdabe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qa-vpc-pub-sub"
            },
            "tags_all": {
              "Name": "qa-vpc-pub-sub"
            },
            "vpc_id": "vpc-001fe1f48e6e65477"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:vpc/vpc-001fe1f48e6e65477",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-01a676989122b5895",
            "default_route_table_id": "rtb-0de17295f41093dc8",
            "default_security_group_id": "sg-002e00faeb5fc86f1",
            "dhcp_options_id": "dopt-0a88cb5f54225e1b8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001fe1f48e6e65477",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de17295f41093dc8",
            "owner_id": "862066027316",
            "tags": {
              "Name": "qa-vpc"
            },
            "tags_all": {
              "Name": "qa-vpc"
            }
          }
        }
      ]
    }
  ]
}